--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     </style>
 </head>
 <body>
+    <h2><span class="dragon"></span>About Me</h2>
+    <h2><span class="dragon"></span>About Me</h2>
 
 <header>
     <h1>Alexander's Professional Profile</h1>
@@ -88,6 +90,7 @@
             <p>Supported Social Neuroscience lectures and research using statistical software and data visualization tools.</p>
         </ul>
     </section>
+    <h2><span class="dragon"></span>About Me</h2>
 
     <section>
         <h2>Skills and Interests</h2>
@@ -99,6 +102,7 @@
         </ul>
     </section>
 </main>
+<h2><span class="dragon"></span>About Me</h2>
 
 <footer>
     <p>Contact me at: alexander@example.com | LinkedIn: linkedin.com/in/alexander</p>
