--- a/about.html
+++ b/about.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alexander's Professional Profile</title>
+    <title>About Me - Alexander</title>
     <link rel="stylesheet" href="style.css"> <!-- Corrected CSS path -->
 </head>
 <body>
 
 <header>
-    <h1>Alexander's Professional Profile</h1>
+    <h1>About Me</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="sustainable_club.html">Sustainable Engineering</a></li>
         </ul>
@@ -22,8 +21,8 @@
 
 <main>
     <section>
-        <h2>Welcome to My Professional Profile</h2>
-        <p>This site showcases my work, education, and contributions to environmental sustainability. Use the navigation to learn more about my professional journey and the impactful projects I've been part of.</p>
+        <h2>Introduction</h2>
+        <p>Hello! My name is Alexander, and I’m a dedicated data analyst with a passion for cognitive science and sustainable engineering. I have a diverse background in business intelligence, data analysis, and community-focused sustainability projects.</p>
     </section>
 </main>
 
