--- a/sustainable_club.html
+++ b/sustainable_club.html
@@ -15,8 +15,10 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="resume.html">Resume</a></li>
+            <li><a href="sustainable_club.html" class="active">Sustainable Engineering</a></li>
         </ul>
     </nav>
+    
 </header>
 
 <main>
