--- a/about.html
+++ b/about.html
@@ -13,10 +13,12 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html" class="active">About Me</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="sustainable_club.html">Sustainable Engineering</a></li>
         </ul>
     </nav>
+    
 </header>
 
 <main>
