--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <h1>Alexander's Professional Profile</h1>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="sustainable_club.html">Sustainable Engineering</a></li>
         </ul>
     </nav>
+    
 </header>
 
 <main>
