--- a/resume.html
+++ b/resume.html
@@ -14,9 +14,11 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
+            <li><a href="resume.html" class="active">Resume</a></li>
             <li><a href="sustainable_club.html">Sustainable Engineering</a></li>
         </ul>
     </nav>
+    
 </header>
 
 <main>
